[gd_scene load_steps=8 format=3 uid="uid://yjm3urwd3div"]

[ext_resource type="Script" path="res://scripts/menu_final.gd" id="1_byslr"]
[ext_resource type="Texture2D" uid="uid://cnccrfwxxknkk" path="res://assests/sprites/qq30je4ev8oc1.png" id="1_euvcb"]
[ext_resource type="FontFile" uid="uid://cvd8jb10rnjoa" path="res://assests/fonts/PixelOperator8-Bold.ttf" id="2_18tw7"]

[sub_resource type="Gradient" id="Gradient_sfduv"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.796078, 0.796078, 0.796078, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3equj"]
gradient = SubResource("Gradient_sfduv")

[sub_resource type="LabelSettings" id="LabelSettings_txqfx"]
font = ExtResource("2_18tw7")

[sub_resource type="LabelSettings" id="LabelSettings_7p2fq"]
font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_byslr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(574, 326)
scale = Vector2(4.66016, 671.75)
texture = SubResource("GradientTexture1D_3equj")

[node name="Qq30Je4Ev8Oc1" type="Sprite2D" parent="."]
position = Vector2(933, 459)
texture = ExtResource("1_euvcb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 89.0
offset_top = -27.0
offset_right = 176.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play again"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 280.0
grow_horizontal = 2
text = "Finally"
label_settings = SubResource("LabelSettings_txqfx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 571.0
offset_right = 368.0
offset_bottom = 602.0
text = "Upload your score"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 172.0
offset_right = 409.0
offset_bottom = 517.0

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 526.0
offset_right = 370.0
offset_bottom = 562.0
placeholder_text = "Name here"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 143.0
offset_right = 325.0
offset_bottom = 166.0
text = "Best Scores"
label_settings = SubResource("LabelSettings_7p2fq")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 181.0
offset_right = 396.0
offset_bottom = 505.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_down" from="VBoxContainer/Exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
